Add most of overview and question flow

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">QuizDroid</string>
-    <string name="start_the_quiz">Start The Quiz!</string>
+    <string name="begin">Begin</string>
 </resources>
