--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">QuizDroid</string>
     <string name="begin">Begin</string>
+    <string name="settings">Settings</string>
 
 </resources>
